Comment and refactoring

--- a/src/app/board-definition/board-definition.component.html
+++ b/src/app/board-definition/board-definition.component.html
@@ -1,6 +1,6 @@
 <section id='toolbar'>
 	<ul>
-		<li (click)="setMoveAndZoomTool()">Move & Zoom</li>
+		<li (click)="setMoveAndZoomTool()">Move and Zoom</li>
 		<li (click)="setDefineSpaceTool()">define spaces</li>
 	</ul>
 
