Add select track component and route implementation to navigate between screens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 
+<nav class="navbar is-dark"> 
+	<div class="navbar-brand">
+		<div class="navbar-tiems">
+			Formula D
+		</div>
+	</div>
+</nav>
 
 
-<fd-board-definition></fd-board-definition>
+<main class="container">
+	<router-outlet></router-outlet>
+</main>
