--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+$dimensions: 16 24 32 48 64 96 128 248 512;
+
+@import "~bulma";
