Fist step refactoring
use Agular componant to représent Space definition. Vue is manualy
managed with PaperJs.

Percictence does not work at this point.

--- a/src/app/board-definition/board-definition.component.html
+++ b/src/app/board-definition/board-definition.component.html
@@ -1,5 +1,7 @@
 
 <section id='game-board'>
-	<fd-gameboard #gameboard></fd-gameboard>
+	<fd-gameboard #gameboard>
+		<fd-space-definition [id]="key" *ngFor="let key of spaceDefinitionKeys$ | async"></fd-space-definition>
+	</fd-gameboard>
 
 </section>
