--- a/src/app/board-definition/board-definition.component.html
+++ b/src/app/board-definition/board-definition.component.html
@@ -1,5 +1,5 @@
 
-<section class="tile is-5 dialog-position" *ngIf="getSelectedSpaceDefinition().length === 1">
+<section class="tile is-5 dialog-position" *ngIf="showDialog">
 	<fd-space-definition-form [model]="getSelectedSpaceDefinition()[0]"></fd-space-definition-form>
 	
 </section>
@@ -7,8 +7,12 @@
 <section id='game-board'>
 	<fd-gameboard #gameboard
 		(delete)="removeSelectedElements()"
-		(boardClick)="crateNewSpaceDefinition($event)">
-			<fd-space-definition [id]="key" *ngFor="let key of spaceDefinitionKeys$ | async"></fd-space-definition>
+		(boardClick)="onBoardClicked($event)">
+			<fd-space-definition 
+				[id]="key" 
+				*ngFor="let key of spaceDefinitionKeys$ | async"
+				(tokenClicked)="onTokenClicked($event)">
+			</fd-space-definition>
 	</fd-gameboard>
 
 </section>
