add fadein fadeout to the spaceDefinitionForm

--- a/src/app/board-definition/board-definition.component.html
+++ b/src/app/board-definition/board-definition.component.html
@@ -1,6 +1,6 @@
 
-<section class="tile is-5 dialog-position" *ngIf="showDialog">
-	<fd-space-definition-form [model]="getSelectedSpaceDefinition()[0]"></fd-space-definition-form>
+<section class="tile is-5 dialog-position" >
+	<fd-space-definition-form [model]="getSelectedSpaceDefinition()[0]" [visible]="showDialog"></fd-space-definition-form>
 	
 </section>
 
