--- a/src/app/board-definition/space-definition-form/space-definition-form.component.html
+++ b/src/app/board-definition/space-definition-form/space-definition-form.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="box is-size-3">
+<div [@visible] *ngIf="visible" class="box is-size-3" >
 	<form>
 	
 <!-- 	Static data (can't be modified by the form) -->
